--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 body {
 	background: pink;
 	font-family: "Comic Sans MS";
+	
+}
+
+h1 {
+	text-align: center;
+	font-weight: bold;
+	font-style: italic;
 }
